use modular guava from staging repo